--- a/hobby-more.html
+++ b/hobby-more.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MORE | 2025年前期ポートフォリオ</title>
-    <link rel="stylesheet" href="../top/top.css">
+    <title>Hobby | 2025年前期ポートフォリオ</title>
+    <link rel="stylesheet" href="./index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,7 +20,7 @@
 
 <body>
     <header class="sideber">
-        <a href="../top/top.html"><img src="../img/ト音記号1.png" alt="各ページへの目次画像"></a>
+        <a href="./index.html"><img src="./img/ト音記号1.png" alt="各ページへの目次画像"></a>
         <div class="header">
             <button class="hamburger-morph" aria-label="メニュー" aria-controls="morph-menu" aria-expanded="false">
                 <svg class="hamburger-morph__icon" width="48" height="48" viewBox="0 0 100 100">
@@ -36,7 +36,7 @@
                 <div class="nav-morph__wrapper">
                     <ul class="nav-morph__list">
                         <li class="nav-morph__item">
-                            <a href="../top/top.html" class="nav-morph__link">
+                            <a href="./index.html" class="nav-morph__link">
                                 <span class="nav-morph__text">TOP</span>
                                 <span class="nav-morph__hover"></span>
                             </a>
@@ -111,7 +111,7 @@
         </article>
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../top/top.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
