--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ポートフォリオ | 2025前期</title>
-    <link rel="stylesheet" href="top.css">
+    <title>TOP | 2025年前期ポートフォリオ</title>
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,7 +20,7 @@
 
 <body>
     <header class="sideber">
-        <a href=""><img src="../img/ト音記号1.png" alt="各ページへの目次画像"></a>
+        <a href=""><img src="./img/ト音記号1.png" alt="各ページへの目次画像"></a>
         <div class="header">
             <button class="hamburger-morph" aria-label="メニュー" aria-controls="morph-menu" aria-expanded="false">
                 <svg class="hamburger-morph__icon" width="48" height="48" viewBox="0 0 100 100">
@@ -41,17 +41,17 @@
                             </a>
                         </li>
                         <li class="nav-morph__item">
-                            <a href="../more/about-more.html" class="nav-morph__link">
+                            <a href="./about-more.html" class="nav-morph__link">
                                 <span class="nav-morph__text">About</span>
                             </a>
                         </li>
                         <li class="nav-morph__item">
-                            <a href="../more/skill-more.html" class="nav-morph__link">
+                            <a href="./skill-more.html" class="nav-morph__link">
                                 <span class="nav-morph__text">Skill</span>
                             </a>
                         </li>
                         <li class="nav-morph__item">
-                            <a href="../more/hobby-more.html" class="nav-morph__link">
+                            <a href="./hobby-more.html" class="nav-morph__link">
                                 <span class="nav-morph__text">Hobby</span>
                             </a>
                         </li>
@@ -85,7 +85,7 @@
                 <p>小学生の頃、パソコンに出逢いパソコンの楽しさに気づく。</p>
                 <p>今20歳になってもパソコンが大好きで毎日学び、楽しむ日々、そこには</p>
                 <p>とある事がきっかけで将来パソコンを使う仕事に就きたいと考えるようになる…</p>
-                <button class="more-text"><a href="../more/about-more.html">→MORE</a></button>
+                <button class="more-text"><a href="./about-more.html">→MORE</a></button>
             </section>
         </article>
         <article class="topic2">
@@ -121,7 +121,7 @@
                 <p>専門学校1年生の時に取得。Pythonをもっと勉強して完璧に書けるようになりたい。</p>
                 <h2>J検 情報システム試験 基本スキル＆システムデザインスキル</h2>
                 <p>専門学校1年生の時に取得。筆記でITの知識を身に着けるのは大事だと思う。</p>
-                <button class="more-text"><a href="../more/skill-more.html">→MORE</a></button>
+                <button class="more-text"><a href="./skill-more.html">→MORE</a></button>
             </section>
         </article>
         <article class="topic3">
@@ -136,7 +136,7 @@
                 <p>日本を超え海外を目指す皆ポテンシャルが高い3人組グループ。</p>
                 <p>好きな音楽が年々増える一方、</p>
                 <p>いつか音楽全般を好きになりたいと考えている今日この頃…</p>
-                <button class="more-text"><a href="../more/hobby-more.html">→MORE</a></button>
+                <button class="more-text"><a href="./hobby-more.html">→MORE</a></button>
             </section>
         </article>
     </main>
@@ -154,7 +154,7 @@
         </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="./top.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
