--- a/about-more.html
+++ b/about-more.html
@@ -74,7 +74,7 @@
             <section class="topic1-more">
                 <div class="name">
                     <h2>なまえ</h2>
-                    <img src="/Users/takahashi/Pictures/Screenshots/スクリーンショット 2024-05-09 144228.png" alt="アイコン"
+                    <img src="./img/アイコン.png" alt="アイコン"
                         align="right">
                     <h3>たかはし なほ</h3>
                     <p>2005年5月28日生まれ。岩手県出身</p>
@@ -86,7 +86,7 @@
                 </div>
                 <h2>幼少期</h2>
                 <div class="name">
-                    <img src="/Users/takahashi/Desktop/PORTFOLIO/img/夜桜.jpg" alt="自分で撮った2025年春の夜桜" align="right">
+                    <img src="./img/夜桜.jpg" alt="自分で撮った2025年春の夜桜" align="right">
                 </div>
                 <p><span class="bottom-border-line">2005年5月に生まれる。</span></p><p>長女であるからか真面目でマイペースな性格だよねとよく言われる。</p>
                 <p>人見知りな性格で自分からあまり前に出るタイプではなかった。</p><p>音楽をかけるとノリノリになったらしい。</p>
@@ -97,7 +97,7 @@
                 <p>高学年になると本格的にパソコンに熱中。時間があればひたすら触っていた。</p>
                 <p>(写真右上は2025年春に私がスマホで撮った夜桜、右下は同じく夏に撮ったラベンダー畑)</p>
                 <div class="name">
-                    <img src="/Users/takahashi/Desktop/PORTFOLIO/img/ラベンダー.jpg" alt="自分で撮った2025年夏のラベンダー畑" align="right">
+                    <img src="./img/ラベンダー.jpg" alt="自分で撮った2025年夏のラベンダー畑" align="right">
                 </div>
                 <h2>中学生</h2>
                 <p>中学に入学すると、合唱部に入部。</p><p><span class="bottom-border-line">パソコンと同じくらい合唱が好きでこれしかないと確信。</span></p>
