--- a/hobby-more.html
+++ b/hobby-more.html
@@ -81,7 +81,7 @@
                 <p>触れ始めた当初はパソコンをここまで大好きになるとは思ってなかったけど今思えば、<span
                         class="bottom-border-line">パソコンは人生で初めてできた趣味</span>かもしれません。</p>
                 <p>高校も専門学校もパソコンを扱う学校に進学して本当に良かったです。大好きなパソコンを続けられて幸せです。</p>
-                <img src="/Users/takahashi/Pictures/Screenshots/gahag-0075639565-1.jpg" alt="パソコンの写真">
+                <img src="./img/パソコン.jpg" alt="パソコンの写真">
                 <h2>好きな音楽について</h2>
                 <p>特に好きなジャンルは、<span class="bottom-border-line">邦楽</span>です。邦楽ならなんでも聴きます。</p>
                 <p>最近のトレンドを聴いたり、昔に発売された曲を聴いたり、聴くジャンルはさまざまです。</p>
@@ -89,7 +89,7 @@
                 <p>CD沢山持ってます。<span class="bottom-border-line">サブスクよりもCD派。</span>CDの配置を考えたり部屋のリメイクが楽しいです。</p>
                 <p>中学の時、合唱部で毎日歌っていた頃もですが、歌うことは物心ついた時からずっと大好きです。</p>
                 <p>歌うことの連鎖で音楽が好きになりました。<span class="bottom-border-line">音楽は人生に欠かすことのできない日常</span>です。</p>
-                <img src="/Users/takahashi/Pictures/Screenshots/publicdomainq-0051045shx.jpg" alt="楽譜の写真">
+                <img src="./img/楽譜.jpg" alt="楽譜の写真">
                 <h2>最近ハマっていること</h2>
                 <p>ここ<span class="bottom-border-line">最近は、ドラマや映画を見ることに熱中</span>しています。</p>
                 <p>お芝居で二面性がある俳優が好きです。ギャップのある役柄は、作品ごとに違った良さを見ることができ作品により深く入り込むことができます。</p>
@@ -104,9 +104,9 @@
                 <p>猫は寝ているだけでも食べているだけでも遊んでいても所作一つ一つがかわいくて癒されます。</p>
                 <p><span class="bottom-border-line">猫たちの名前を呼ぶと振り返って来てくれて一生懸命なにかを喋ってくれるのがたまらなくかわいいです。</span></p>
                 <p>猫たちが赤ちゃんの時から一緒にいるので親心のような不思議な感情が芽生えます。</p>
-                <img src="/Users/takahashi/Pictures/Screenshots/スクリーンショット 2024-05-09 144228.png" alt="猫の写真1">
-                <img src="/Users/takahashi/Desktop/PORTFOLIO/img/IMG_8409.jpg" alt="猫の写真2">
-                <img src="/Users/takahashi/Desktop/PORTFOLIO/img/IMG_0040.jpg" alt="猫の写真3">
+                <img src="./img/アイコン.png" alt="猫の写真1">
+                <img src="./img/猫の写真2.jpg" alt="猫の写真2">
+                <img src="./img/猫の写真3.jpg" alt="猫の写真3">
             </section>
         </article>
     </main>
