--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                 <h2>お問い合わせ</h2><br>
                 <h3>こちらにご連絡ください。</h3>
                 <a href="https://github.com/naho-takahashi" target="_blank"><img
-                        src="/Users/takahashi/Desktop/PORTFOLIO/img/GitHub.png" alt="GitHubの画像"></a>
-                <a href=""><img src="/Users/takahashi/Desktop/PORTFOLIO/img/X.png" alt="Xの画像"></a>
-                <a href=""><img src="/Users/takahashi/Desktop/PORTFOLIO/img/Instagram.png" alt="Instagramの画像"></a>
+                        src="./img/GitHub.png" alt="GitHubの画像"></a>
+                <a href=""><img src="./img/X.png" alt="Xの画像"></a>
+                <a href=""><img src="./img/Instagram.png" alt="Instagramの画像"></a>
             </small>
         </footer>
     </div>
