--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <p>2005年5月28日生まれ。岩手県出身。</p>
                 <p>趣味:音楽(聴いたり、弾いたり、歌ったり)</p>
                 <p>好きなアーティスト：Number_i</p>
-                <p>パソコン、映画鑑賞、ゲーム、美味しいもの、スイーツ、猫、神社巡りなど。</p>
-                <p>小学生の頃、パソコンに出逢いパソコンの楽しさに気づく。</p>
+                <p>パソコン、映画鑑賞、ゲーム、美味しいもの、スイーツ、猫、神社巡りなど</p>
+                <p>小学生の頃、パソコンに出逢いパソコンの楽しさに気づく</p>
                 <p>今20歳になってもパソコンが大好きで毎日学び、楽しむ日々、そこには</p>
                 <p>とある事がきっかけで将来パソコンを使う仕事に就きたいと考えるようになる…</p>
                 <button class="more-text"><a href="./about-more.html">→MORE</a></button>
