Skill文字の大きさ修正

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </li>
                         <li class="nav-morph__item">
                             <a href="./skill-more.html" class="nav-morph__link">
-                                <span class="nav-morph__text">Skill</span>
+                                <span class="nav-morph__text">Skill/Work</span>
                             </a>
                         </li>
                         <li class="nav-morph__item">
@@ -90,7 +90,7 @@
         </article>
         <article class="topic2">
             <section>
-                <h1>Skill/自己評価</h1>
+                <h1>Skill/Work</h1>
                 <h2 class="star">HTML ★★★★★</div>
                 </h2>
                 <p>初めて触ったのは高校生頃。専門学校に入って深く学んでます。一番得意です！</p>
