--- a/skill-more.html
+++ b/skill-more.html
@@ -67,9 +67,9 @@
     <main>
         <a href="#" class="top-button-again">🔝</a>
         <article class="top-more">
-            <h1>Skill</h1>
+            <h1>Skill / Work</h1>
             <div class="p2-more">
-                <p>-資格について-</p>
+                <p>-資格や制作について-</p>
             </div>
             <section class="topic1-more">
                 <h2>今まで取得した資格一覧(2025年5月現在)</h2>
@@ -120,6 +120,7 @@
                 <p>総合得点も納得のいく点数で、<span class="bottom-border-line">無事に合格</span>することができました。</p>
                 <p><span class="bottom-border-line">絶対に取りたい強い気持ちは現在も検定を受ける際の偉大な原動力になっています。</span></p>
                 <p>合格することが出来て、念願の夢が叶って、小さい頃からの努力がやっと報われたと感じました。</p>
+                <h2>Work</h2>
             </section>
         </article>
     </main>
