--- a/about-more.html
+++ b/about-more.html
@@ -81,8 +81,8 @@
                     <p>パソコンと音楽が大好きなマイペースに生きていく人</p>
                     <p>最近熱中していることは猫を愛でることと映画鑑賞をすること</p>
                     <p>バースデーカラーはオールドゴールド(今回の文字色にしました)</p>
-                    <p>MBTIはINFJ(提唱者)</p>
-                    <p>好きな場所は緑がいっぱいなところと落ち着く静かなところです</p>
+                    <p>好きな料理は寿司、焼きそば、</p>
+                    <p>好きな場所は緑がいっぱいなところ、落ち着く静かなところです</p>
                 </div>
                 <h2>幼少期</h2>
                 <div class="name">
@@ -92,22 +92,22 @@
                 <p>人見知りな性格で自分からあまり前に出るタイプではなかった。</p><p>音楽をかけるとノリノリになったらしい。</p>
                 <h2>小学生</h2>
                 <p>小学校入学時、人見知りだった私が卒業までの間に大きく成長する。</p>
-                <p>この頃から<span class="bottom-border-line">誰かの役に立ちたい想いが強く</span>、</p><p>小学・中学で何度か学級委員を務める。</p>
+                <p>この頃から<span class="bottom-border-line">誰かの役に立ちたい想いが強く</span>、何度か学級委員を務める。</p>
                 <p><span class="bottom-border-line">9歳の頃からパソコンに初めて触れる。</span>始めは動画を見たり、調べ物をした事がきっかけ。</p>
                 <p>高学年になると本格的にパソコンに熱中。時間があればひたすら触っていた。</p>
-                <p>(写真右上は2025年春に私がスマホで撮った夜桜、右下は同じく夏に撮ったラベンダー畑)</p>
+                <p>(写真右上は2025年春に私が撮った夜桜、右下は同じく夏に撮ったラベンダー畑)</p>
                 <div class="name">
                     <img src="./img/ラベンダー.jpg" alt="自分で撮った2025年夏のラベンダー畑" align="right">
                 </div>
                 <h2>中学生</h2>
-                <p>中学に入学すると、合唱部に入部。</p><p><span class="bottom-border-line">パソコンと同じくらい合唱が好きでこれしかないと確信。</span></p>
-                <p>特に印象に残っているのは、外部講師を招いたホールでの合唱練習だ。</p>
-                <p>1年生の時は過酷だと思ったが、友達と先輩の</p><p>いつもと違う真剣な姿勢に感化され私も負けていられないなと火が付いた。</p>
-                <p>ずっとその場に立って練習するため姿勢が鍛えられ、姿勢がいいねと言われた時は嬉しかった。</p>
+                <p>中学校に入学、合唱部に入部。</p><p><span class="bottom-border-line">パソコンと同じくらい合唱が好きでこの部しかないと確信。</span></p>
+                <p>特に印象に残っているのは、外部講師を招いたホールでの合唱練習。</p>
+                <p>1年生の時は過酷だと思うが、友達や先輩の熱い眼差し、</p><p>真剣な姿勢に感化され私も負けていられないと火が付いた。</p>
+                <p>立ち姿勢でずっと練習するため姿勢が鍛えられ、合唱部は姿勢がいいねと褒められた。</p>
                 <p>3年間仲間とともに合唱を楽しむ。一日一日がかけがえのない日々だった。</p>
                 <p>コンクールに向けて毎日練習し仲間と一つの音楽をつくる事が楽しくてとても充実した3年間だった。</p>
                 <p>この頃にプログラミングを知る。第一印象は、なんだか難しそう。</p>
-                <p>受験生になり志望校を決める時、私は何を目指したいのか、何に興味があるのか深く考えた。</p>
+                <p>高校の志望校を決める時、私は何を目指したいのか、何に興味があるのか深く考えた。</p>
                 <p>高校に行っても合唱を続けたいと言う者たちもいたが、私は合唱を続けることを考えておらず、</p>
                 <p><span class="bottom-border-line">自分の興味のあるもの、将来の仕事に生かせる学校に行きたい</span>と考えていた。</p>
                 <p>最終的な想いが<span class="bottom-border-line">「大好きなパソコンを学べる学校に行きたい」</span>だった。</p>
