--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <footer>
             <small>
                 <h1>Contact</h1>
-                <h2>お問い合わせ</h2><br>
+                <h2>お問い合わせ</h2>
                 <h3>こちらにご連絡ください。</h3>
                 <a href="https://github.com/naho-takahashi" target="_blank"><img
                         src="./img/GitHub.png" alt="GitHubの画像"></a>
