--- a/skill-more.html
+++ b/skill-more.html
@@ -71,7 +71,7 @@
             <div class="p2-more">
                 <p>-資格や制作について-</p>
             </div>
-            <section class="topic1-more">
+            <div class="topic1-more">
                 <h2>今まで取得した資格一覧(2025年5月現在)</h2>
                 <p>今まで自分が取得した高1～専門学校2年生までの資格・検定をまとめました。</p>
                 <h2>2025年(今現在～)</h2>
@@ -120,7 +120,21 @@
                 <p>総合得点も納得のいく点数で、<span class="bottom-border-line">無事に合格</span>することができました。</p>
                 <p><span class="bottom-border-line">絶対に取りたい強い気持ちは現在も検定を受ける際の偉大な原動力になっています。</span></p>
                 <p>合格することが出来て、念願の夢が叶って、小さい頃からの努力がやっと報われたと感じました。</p>
-                <h2>Work</h2>
+            </section>
+            <section>
+            <h2>Work</h2>
+            <h3>神経衰弱ゲームアプリ</h3>
+                <img src="./img/神経衰弱.png" alt="神経衰弱アプリ画像">
+                <img src="./img/神経衰弱2.png" alt="神経衰弱アプリ画像ゲーム">
+                <p>専門学校1年生の後期に、Pythonのtkinterで神経衰弱ができるアプリを作りました。</p>
+                <h3>連絡先管理アプリ</h3>
+                <img src="./img/連絡先管理.png" alt="連絡先管理アプリ画像">
+                <img src="./img/連絡先管理2.png" alt="連絡先管理アプリ画像ログイン">
+                <p>同じく1年生の後期に、Pythonのtkinterで連絡先を管理できるアプリを作りました。</p>
+                <h3>2025年前期ポートフォリオ</h3>
+                <img src="./img/2025年前期ポートフォリオ.png" alt="2025年前期ポートフォリオ画像">
+                <p>今回のポートフォリオになります。今回は「海」を題材に制作しました。画面をスクロールすると、</p>
+                <p>グラデーションがかかるようにしています。深い海を表現する為に色彩もこだわりました。</p>
             </section>
         </article>
     </main>
