コンテンツ修正

--- a/skill-more.html
+++ b/skill-more.html
@@ -127,14 +127,27 @@
                 <img src="./img/神経衰弱.png" alt="神経衰弱アプリ画像">
                 <img src="./img/神経衰弱2.png" alt="神経衰弱アプリ画像ゲーム">
                 <p>専門学校1年生の後期に、Pythonのtkinterで神経衰弱ができるアプリを作りました。</p>
+                <p>幼い頃から神経衰弱が好きで、ひとりで遊べる神経衰弱ゲームがあったら楽しいんじゃないかと思ったことが始まりです。</p>
+                <p>トランプを規則的にタテヨコ並べる処理を書くのが難しくて何度も試行錯誤しながら頑張って作成しました。</p>
+                <p>プログラムを少し書き換えるだけで無限にプレイ出来るのでずっと遊ぶことが出来ます。</p>
+                <p>とても優雅なBGMが流れているため、音楽にノリながら楽しくゲームに没頭できます。</p>
                 <h3>連絡先管理アプリ</h3>
                 <img src="./img/連絡先管理.png" alt="連絡先管理アプリ画像">
                 <img src="./img/連絡先管理2.png" alt="連絡先管理アプリ画像ログイン">
                 <p>同じく1年生の後期に、Pythonのtkinterで連絡先を管理できるアプリを作りました。</p>
+                <p>自分なりの連絡先管理アプリが作りたい!と考え、オリジナリティを求めて制作しました。</p>
+                <p>データベースで情報を管理している為、データベースとの紐づけをするのに苦労しました。</p>
+                <p>ログイン機能、新規登録機能、ユーザー個人の画面、登録・更新・削除機能、検索機能、TOPに戻るボタン機能と</p>
+                <p>視覚的にも楽しみながら管理できる使いやすいシンプルなUI、UXを意識して仕上げました。</p>
                 <h3>2025年前期ポートフォリオ</h3>
-                <img src="./img/2025年前期ポートフォリオ.png" alt="2025年前期ポートフォリオ画像">
+                <img class="port-img" src="./img/2025年前期ポートフォリオ.png" alt="2025年前期ポートフォリオ画像">
+                <img class="port-img" src="./img/2025年前期ポートフォリオ画像.png" alt="2025年前期ポートフォリオ画像2">
                 <p>今回のポートフォリオになります。今回は「海」を題材に制作しました。画面をスクロールすると、</p>
-                <p>グラデーションがかかるようにしています。深い海を表現する為に色彩もこだわりました。</p>
+                <p>背景色に青のグラデーションがかかるようにしています。深海を表現する為、全体的に青の色彩でまとめました。</p>
+                <p>海を題材にした理由は、両親が海好きで、私の名前の由来が海モチーフで付けられたから、</p>
+                <p>私らしさを表現するには海の要素を取り入れることでより自己表現できると考えたからです。</p>
+                <p>白のボックスに文字をのせてはっきり読むことが出来ます。</p>
+                <p>私が撮った写真を多く取り入れ、自分自身を表しつつ、誰でも楽しみながら見ることが出来ます。</p>
             </section>
         </article>
     </main>
