ブラウザ&スマホ画面対応

--- a/about-more.html
+++ b/about-more.html
@@ -111,10 +111,16 @@
                 <p>高校に行っても合唱を続けたいと言う者たちもいたが、私は合唱を続けることを考えておらず、</p>
                 <p><span class="bottom-border-line">自分の興味のあるもの、将来の仕事に生かせる学校に行きたい</span>と考えていた。</p>
                 <p>最終的な想いが<span class="bottom-border-line">「大好きなパソコンを学べる学校に行きたい」</span>だった。</p>
+                <p>(写真右下は2024年秋に私が撮った紅葉)</p>
+                <div class="name">
+                    <img src="./img/紅葉.jpg" alt="自分で撮った2024年秋の紅葉" align="right">
+                </div>
                 <h2>高校生</h2>
-                <p>高校入学。情報や会計、幅広く学べる商業高校に入学。パソコン、簿記など広い分野を学ぶ。</p>
-                <p>授業の大半がパソコンに触れるので私にとって最高の環境だった。簿記を学び、経理の凄さを知った。</p>
-                <p>高1の冬、幼い頃からずっと目標にしていた<span class="bottom-border-line">実用英検準二級を独学で合格</span>することができた。</p>
+                <p>高校入学。情報や会計、幅広く学べる商業高校に入学。</p>
+                <p>パソコン、簿記など広い分野を学ぶ。</p>
+                <p>授業の大半がパソコンに触れるので私にとって最高の環境だった。</p>
+                <p>簿記を学び、経理の凄さを知った。</p>
+                <p>高1の冬、ずっと目標にしていた<span class="bottom-border-line">実用英検準二級を独学で合格</span>できた。</p>
                 <p>苦労した事も沢山あったが、あの時の喜びと達成感は今でも忘れない。</p>
                 <p>英検に挑戦したことで自然と努力する力、自分を強くする誇りに代わった。</p>
                 <p>この先の資格取得に向けて、受ける際の原動力や確かな希望と自信に繋がった。英検を受けて本当に良かった。</p>
